# cyclopsDemo

./: .gitmodules  Brewfile  CITATION.cff  README.md
.devcontainer/: Dockerfile  devcontainer.json
Docker/: Dockerfile  buildContainer.sh  pushContainerImage.sh  runContainer.sh
adcDacTester/: CMakeLists.txt
adcDacTester/src/: helpers.c  helpers.h  main.c  mainThread.c  mainThread.h
dummyAdcDac/: CMakeLists.txt
dummyAdcDac/src/: main.c  mainThread.c  mainThread.h
dummyAdcDacSharedMemFIFO/: CMakeLists.txt
dummyAdcDacSharedMemFIFO/src/: SharedMemoryFIFO.c  SharedMemoryFIFO.h  main.c  mainThread.c  mainThread.h
pipeBench/: CMakeLists.txt
pipeBench/src/: helpers.c  helpers.h  main.c  mainThread.c  mainThread.h
scripts/: buildInfrastructure.sh  cleanBuild.sh  cleanupDemo.sh  cleanupDemoSharedMem.sh  collectRunResults.sh  runDemo.sh  runDemoAndCollectResults.sh  runDemoAndCollectResultsSharedMemory.sh  runDemoAndCollectResultsSharedMemory2Instances.sh  runDemoTmux.sh  runDemoTmuxSharedMem.sh  runMultithreadGen.sh  runRxMultithreadGen.sh  runTxMultithreadGen.sh  suspendDemo.sh
sharedMemFIFOBench/: CMakeLists.txt
sharedMemFIFOBench/src/: SharedMemoryFIFO.c  SharedMemoryFIFO.h  cleanupShared.c  helpers.c  helpers.h  main.c  mainThread.c  mainThread.h
